-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.12.0
-
None
-
24dccb1393614bea6b1830fbff9b03368d3b7fbd
"List of all members, including inherited members" is missing inherited members
e.g.
http://doc.qt.io/qt-5.11/qwidget-members.html has startTimer
http://doc.qt.io/qt-5.12/qwidget-members.html has not
- is duplicated by
-
QTCREATORBUG-21904 Documentation wrong (linking)
-
- Closed
-
-
QTBUG-72524 List of all member does not contain members from inherited classes
-
- Closed
-
| For Gerrit Dashboard: QTBUG-72357 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 248774,2 | qdoc: Include inherited members in all-members list | 5.12.1 | qt/qttools | Status: MERGED | +2 | 0 |