qdoc: Include inherited members in all-members list

A refactoring update in qdoc stopped including the class's inherited members
in its all-members list. This update corrects that problem.

Change-Id: I62faa9f6c61e2dc437945acda6107794acd5ca13
Task-number: QTBUG-72357
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Sze Howe Koh <szehowe.koh@gmail.com>